crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__snapshot_tests__complex_extract_variables.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/snapshot_tests.rs
assertion_line: 78
expression: vars
---
[
    "CONDA_BUILD_SYSROOT",
    "build_type",
    "c_compiler",
    "c_compiler_version",
    "cuda_version",
    "cxx_compiler",
    "cxx_compiler_version",
    "description",
    "extra_deps",
    "has_cpp_lib",
    "license",
    "linux",
    "name",
    "org",
    "osx",
    "python",
    "summary",
    "unix",
    "version",
    "win",
]
