crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__snapshot_tests__conditionals_extract_variables.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/snapshot_tests.rs
expression: vars
---
[
    "c_compiler",
    "c_compiler_version",
    "cuda",
    "linux",
    "openmp",
    "osx",
    "some_variable",
    "unix",
    "win",
]
