crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__snapshot_tests__license_files_snapshot.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/snapshot_tests.rs
expression: "serde_yaml::to_string(&recipe).unwrap()"
---
package:
  name: test-license-files
  version: 1.0.0
build:
  script: {}
  python:
    entry_points: []
    skip_pyc_compilation: []
    use_python_app_entrypoint: false
  skip: []
  always_copy_files: []
  always_include_files: []
  merge_build_and_host_envs: false
  dynamic_linking:
    rpaths: []
    binary_relocation: true
    missing_dso_allowlist: []
    rpath_allowlist: []
  variant:
    use_keys: []
    ignore_keys: []
  prefix_detection:
    force_file_type:
      text: []
      binary: []
    ignore: false
    ignore_binary_files: false
  post_process: []
requirements: {}
about:
  license: GPL-1.0-or-later OR Artistic-1.0-Perl
  license_file:
  - LICENSE-ARTISTIC
  - LICENSE-GPL
  summary: Test multiple license files
extra: {}
