crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__snapshot_tests__multi_output_extract_variables.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/snapshot_tests.rs
expression: vars
---
[
    "build_number",
    "c_compiler",
    "c_compiler_version",
    "cxx_compiler",
    "cxx_compiler_version",
    "version",
]
