crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__snapshot_tests__multi_output_templates_extract_variables.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/snapshot_tests.rs
expression: vars
---
[
    "CPU_COUNT",
    "c_compiler",
    "c_compiler_version",
    "name",
    "python_version",
    "staging_name",
    "unix",
    "version",
    "win",
]
