crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__snapshot_tests__subpackages_extract_variables.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/snapshot_tests.rs
expression: vars
---
[]
