crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__snapshot_tests__templates_extract_variables.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/snapshot_tests.rs
assertion_line: 62
expression: vars
---
[
    "CONDA_BUILD_SYSROOT",
    "c_compiler",
    "c_compiler_version",
    "cxx_compiler",
    "cxx_compiler_version",
    "homepage",
    "license",
    "name",
    "platform",
    "python",
    "version",
]
